# Python_predictions

./: .gitignore  bookmark.py  guess.py  main.py  pyproject.toml  requirements-dev.txt  requirements.txt  rps.py
.github/workflows/: ci.yml
api_project/: __init__.py  pokemon.py
data/: bookmarks.json
database_project/: __init__.py  library.py  library.sqlite
src/tryout/: __init__.py
src/tryout/bookmarks/: __init__.py  cli.py
src/tryout/database/: library.py
src/tryout/games/: __init__.py  guess.py  rps.py
src/tryout/pokemon/: __init__.py
src/tryout/quiz_api/: quiz.py
tests/: test_pokemon.py
